Fix layout bug, change markdown filename format "Date_Url"

--- a/UI/Resource/Css/20_page.css
+++ b/UI/Resource/Css/20_page.css
@@ -24,7 +24,7 @@
 	float: left;
 	text-align: left;
 	display: inline-block;
-	width: 120px;
+	width: 150px;
 	height: 20px;
 }
 
@@ -32,7 +32,7 @@
 	float: right;
 	text-align: right;
 	display: inline-block;
-	width: 120px;
+	width: 150px;
 	height: 20px;
 }
 
